# NLP

./: .gitignore  README.md  decoder.ipynb  encoder-decoder.ipynb  encoder.ipynb  pyproject.toml  requirements.txt  rnn.ipynb  trabalho.md
report/: main.tex
src/: lstm.ipynb
src/models/: decoder.py  decoder_parsing.py  encoder.py  encoder_decoder.py  encoder_decoder_parsing.py  rnn.ipynb  rnn_lstm.ipynb  train_all.py
src/models/llm_with_rag/: data_prep.py  evaluate.py  gemini_client.py  prepare_external_testset.py  prepare_ptb_splits.py  prompts.py  retrieval.py  run_tagging.py
src/models/results/: comparison_summary.json  few-shot.json  rag.json  zero-shot.json
src/utils/: data_loader.py  evaluation.py  model_utils.py  preprocessing.py
