[project]
name = "nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keras>=3.14.1",
    "keras-hub>=0.19.0",
    "keras-nlp>=0.19.0",
    "matplotlib>=3.11.0",
    "nltk>=3.9.4",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.21.0",
]
